<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_show_favorites"
          app:showAsAction="ifRoom"
          android:visible="false"
          android:title="@string/show_favorites"
          android:icon="@drawable/ic_favorite_full_black" />

    <item android:id="@+id/action_show_all"
          app:showAsAction="ifRoom"
          android:visible="false"
          android:title="@string/show_all"
          android:icon="@drawable/ic_favorite_full_black" />

    <item
            android:id="@+id/action_sort_asc"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort_asc"/>

    <item
            android:id="@+id/action_sort_desc"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_sort"
            android:title="@string/sort_desc"/>
</menu>