<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            android:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_big">

        <!-- Image -->
        <ImageView
                android:id="@+id/error_image"
                android:layout_width="@dimen/error_image_dimens"
                android:layout_height="@dimen/error_image_dimens"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_marginStart="@dimen/margin_big"
                android:layout_marginTop="@dimen/error_image_margin_top"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/ic_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <!-- Title -->
        <TextView
                android:id="@+id/error_title"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_image"
                android:text="@string/error_title"/>

        <!-- Message -->
        <TextView
                android:id="@+id/error_message"
                style="@style/TextViewStyle.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_big"
                android:gravity="center_horizontal"
                android:text="@string/error_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/error_title"/>


        <Button
                android:id="@+id/error_refresh"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_big"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:text="@string/error_retry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>